[package]
name = "simple_x509"
version = "0.1.1"
authors = ["Oleksandr Kravchenko <zartarn15@gmail.com>"]
description = "A simple X509 creating library."
categories = ["encoding"]
keywords = ["X509"]
license = "ISC"
repository = "https://github.com/zartarn15/simple_x509"
edition = "2018"

[dependencies]
simple_asn1 = "0.5.1"
chrono = { default-features = false, features = ["alloc"], version = "0.4" }

[dev-dependencies]
ring = "0.16.20"
