[package]
name = "simple_x509"
version = "1.0.1"
authors = ["Oleksandr Kravchenko <zartarn15@gmail.com>"]
description = "A simple X509 creating library."
categories = ["encoding"]
keywords = ["X509"]
license = "ISC"
repository = "https://github.com/zartarn15/simple_x509"
edition = "2018"

[dependencies]
simple_asn1 = "0.5.3"
chrono = { default-features = false, features = ["alloc"], version = "0.4" }
num-traits = { default-features = false, version = "0.2" }

[dev-dependencies]
ring = "0.16.20"
regex = "1.5.4"
rustc-serialize = "0.3.24"
